Fixed github icon size error and added navbar to listitems.vue

--- a/collab-shopping/index.html
+++ b/collab-shopping/index.html
@@ -26,14 +26,18 @@
           <a href="https://lleidahack.dev/hackeps-2021/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@teamjej</a>
         </p>
         <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start" width="30em">
-          <a href="https://hackeps-2021.devpost.com/" class="text-gray-500" width="30em">
+          <a href="https://hackeps-2021.devpost.com/" class="text-gray-500 githubclass">
             <img src="./src/assets/github-brands.svg" alt="">
           </a>
           
-            <a href="https://hackeps-2021.devpost.com/" class="text-gray-500" width="30em">
+            <a href="https://hackeps-2021.devpost.com/" class="text-gray-500 githubclass">
               <img src="./src/assets/github-brands.svg" alt="">
             </a>
-          
+          <style>
+            .githubclass{
+              width: 30px;
+            }
+          </style>
         </span>
       </div>
     </footer>
