--- a/collab-shopping/index.html
+++ b/collab-shopping/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/social-messaging-ui-color-shapes/128/shopping-circle-green-512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopper</title>
   </head>
@@ -13,24 +13,23 @@
     <div id="app"></div>
 
 
-
     <script type="module" src="/src/main.js"></script>
 
     <footer class="text-gray-600 body-font">
       <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
         <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
           <img src="./src/assets/carrot-solid.svg" alt="" width="30em" fill="#FF9B42">
-          <span class="ml-3 text-xl">Shopper</span>
+          <span class="ml-3 text-xl">CartFresh</span>
         </a>
-        <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 Shopper —
+        <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 CartFresh —
           <a href="https://lleidahack.dev/hackeps-2021/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@teamjej</a>
         </p>
         <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start" width="30em">
-          <a href="https://hackeps-2021.devpost.com/" class="text-gray-500 githubclass">
+          <a href="https://github.com/ericfib/HackEPS2021-Frontend/" class="text-gray-500 githubclass">
             <img src="./src/assets/github-brands.svg" alt="">
           </a>
           
-            <a href="https://hackeps-2021.devpost.com/" class="text-gray-500 githubclass">
+            <a href="https://github.com/EncryptEx/HackEPS2021/" class="text-gray-500 githubclass">
               <img src="./src/assets/github-brands.svg" alt="">
             </a>
           <style>
