Finished checkout and fixed some bugs

--- a/collab-shopping/index.html
+++ b/collab-shopping/index.html
@@ -40,5 +40,6 @@
         </span>
       </div>
     </footer>
+    <script src="https://kit.fontawesome.com/df57820da4.js" crossorigin="anonymous"></script>
   </body>
 </html>
