--- a/collab-shopping/index.html
+++ b/collab-shopping/index.html
@@ -24,7 +24,7 @@
         <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 CartFresh —
           <a href="https://lleidahack.dev/hackeps-2021/" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@teamjej</a>
         </p>
-        <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start" width="30em">
+        <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
           <a href="https://github.com/ericfib/HackEPS2021-Frontend/" class="text-gray-500 githubclass">
             <img src="./src/assets/github-brands.svg" alt="">
           </a>
@@ -35,6 +35,7 @@
           <style>
             .githubclass{
               width: 30px;
+              max-width: 50px;
             }
           </style>
         </span>
